colddrinks/dummy_colddrinks_consumer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummycolddrinksconsumer
spec:
  containers:
  - name: dummycolddrinksconsumer
    image: nginx
    resources:
      limits:
        memory: "800Mi"
        cpu: "800m"
      requests:
        memory: "600Mi"
        cpu: "400m"
