colddrinks/newingress_colddrinks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colddrinksingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required for colddrinks apps'
spec:
  rules:
  - host: "www.colddrinks.com"
    http:
      paths:
      - path: "/juice"
        pathType: Prefix
        backend:
          service:
            name: juice
            port: 
              number: 80    
      - path: "/milkshake"
        pathType: Prefix
        backend:
          service:
            name: milkshake
            port: 
              number: 80                
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
